Fix attr not visible style

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -203,6 +203,41 @@
   }
 }
 
+@blackout-color: rgba(177, 202, 232, 0.47);
+.blackout {
+  opacity: 0.6;
+  background: 
+    -webkit-linear-gradient(right bottom, rgba(0, 0, 0, 0) 49.9%, @blackout-color 49.9%, @blackout-color 60%, rgba(0, 0, 0, 0) 60%), 
+    -webkit-linear-gradient(right bottom, @blackout-color 10%, rgba(0, 0, 0, 0) 10%);
+  background: 
+    -o-linear-gradient(right bottom, rgba(0, 0, 0, 0) 49.9%, @blackout-color 49.9%, @blackout-color 60%, rgba(0, 0, 0, 0) 60%), 
+    -o-linear-gradient(right bottom, @blackout-color 10%, rgba(0, 0, 0, 0) 10%);
+  background: 
+    linear-gradient(to right bottom, rgba(0, 0, 0, 0) 49.9%, @blackout-color 49.9%, @blackout-color 60%, rgba(0, 0, 0, 0) 60%), 
+    linear-gradient(to right bottom, @blackout-color 10%, rgba(0, 0, 0, 0) 10%);
+  background-size: 1em 1em;
+  background-color: #ffffff;
+  
+  &::after {
+    content: "\f070";
+    font-family: Icons;
+    font-size: 2em;
+    color: #4f73b0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+}
+
+.ui.table thead th.blackout {
+  position: relative;
+  .blackout();
+}
+
+.ui.table td.blackout::after{
+  content: '';
+}
+
 @-moz-document url-prefix() {
   @media screen and (max-width: 1030px) {
     .panel-wrapper{
